# chinese-therapy-bot

./: .gitignore  .gitleaks.toml  AGENTS.md  CORS_ACTION_ITEMS.md  DEV_AUTH_BYPASS.md  DEV_PLAN.md  Developmental_Plan.docx  ENVS.md  PROGRESS.md  README.md  demo_codes.sample.json  deploy_azure_database.sh  deploy_azure_hosting.sh  destroy_azure_resources.sh  publishing_profiles.json  test-info.txt  test_file.txt  test_output.txt  test_random.txt
services/backend/: README.md  alembic.ini  azure_startup.sh  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 20240618_0001_initial_schema.py  20240704_0002_product_analytics.py  20250105_0003_pilot_feedback.py  20250107_0004_pilot_cohort_participants.py  20250110_0005_pilot_uat_sessions.py  20250112_0004_pilot_participants.py  20250214_0005_mood_check_ins.py
services/backend/app/: main.py
services/backend/app/agents/: data_sync.py  pilot_recruitment.py  retention_cleanup.py  summary_scheduler.py  uat_report.py
services/backend/app/api/: deps.py  router.py
services/backend/app/core/: app.py  config.py  database.py  migrations.py
services/backend/app/data/: chat_templates.json  knowledge_base.json
services/backend/app/integrations/: embeddings.py  google.py  llm.py  sms.py  storage.py  therapists.py  wechat.py
services/backend/app/models/: __init__.py  entities.py
services/backend/app/schemas/: analytics.py  auth.py  chat.py  data_subject.py  explore.py  feedback.py  memory.py  mood.py  pilot_cohort.py  pilot_uat.py  reports.py  therapists.py  translation.py  voice.py
services/backend/app/services/: __init__.py  analytics.py  auth.py  chat.py  demo_codes.py  evaluation.py  explore.py  feedback.py  knowledge_base.py  language_detection.py  memory.py  monitoring.py  mood.py  (+7 more)
services/backend/config/: demo_codes.json
services/backend/mindwell_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
services/backend/scripts/: __init__.py  delete_user_data.py  find_user.py  generate_pilot_samples.py  manage_pilot_cohort.py  monitoring_diagnose.py  pilot_followups.py  seed_pilot_feedback.py  summarize_pilot_feedback.py  uat_dry_run.py  uat_sessions.py
services/backend/tests/: conftest.py  test_alert_dispatcher.py  test_analytics_service.py  test_app.py  test_auth_service.py  test_chat_service.py  test_data_subject_service.py  test_data_sync_agent.py  test_database.py  test_evaluation.py  test_explore_service.py  test_feedback_api.py  test_feedback_service.py  test_knowledge_base_service.py  test_language_detection.py  test_monitoring_diagnose_cli.py  test_monitoring_service.py  test_mood_api.py  test_mood_service.py  test_pilot_cohort_api.py  test_pilot_cohort_service.py  test_pilot_recruitment_agent.py  test_pilot_samples.py  test_pilot_uat_api.py  test_pilot_uat_service.py  test_retention_cleanup_agent.py  test_sms_provider.py  test_storage.py  test_summaries.py  test_template_service.py  test_uat_sessions_cli.py  test_voice_api.py
(+312 files in other folders)
