[project]
name = "mindwell-backend"
version = "0.1.0"
description = "MindWell API platform scaffolding."
authors = [
  { name = "MindWell Engineering", email = "engineering@mindwell.health" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "azure-identity>=1.17,<2.0",
  "azure-keyvault-secrets>=4.7,<5.0",
  "aioboto3>=12.4,<13.0",
  "httpx>=0.27,<1.0",
  "pyjwt[crypto]>=2.8,<3.0",
  "openai>=1.12,<2.0",
  "python-multipart>=0.0.6,<0.1",
  "alembic>=1.13,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "aiosqlite>=0.19,<0.20",
  "ruff>=0.6,<0.7",
  "mypy>=1.9,<2.0",
  "types-requests"
]

[project.scripts]
mindwell-api = "app.main:run"
mindwell-summary-scheduler = "app.agents.summary_scheduler:main"
mindwell-data-sync = "app.agents.data_sync:main"
mindwell-retention-cleanup = "app.agents.retention_cleanup:main"
mindwell-monitoring-agent = "app.agents.monitoring:main"
mindwell-analytics-agent = "app.agents.analytics:main"
mindwell-pilot-feedback-report = "scripts.summarize_pilot_feedback:cli"
mindwell-pilot-cohort = "scripts.manage_pilot_cohort:cli"
mindwell-pilot-followups = "scripts.pilot_followups:main"
mindwell-uat-sessions = "scripts.uat_sessions:cli"
mindwell-pilot-samples = "scripts.generate_pilot_samples:cli"
mindwell-monitoring-diagnose = "scripts.monitoring_diagnose:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
